# Maestro

./: .cursor-poetry-reminder  .cursorrules  .gitignore  .poetry-config  IMPLEMENTATION_SUMMARY.md  Makefile  POETRY_SETUP.md  README.md  benchmark_ollama_m3.py  lm_studio_setup_guide.md  mac_m3_llm_comparison.md  optimize_ollama_m3.sh  pyproject.toml
.cursor/: rules
.github/workflows/: maestro-automation.yml
config/: git-automation.json
dashboard/: README.md  demo.py  demo_old.py  documentation_panel.html  index.html  integrate.py  requirements.txt  server.py  server_old.py  start_dashboard.sh
docs/: USAGE.md  USER_MANUAL.md  git-automation.md
docs/templates/: README.template.md  USAGE.template.md  USER_MANUAL.template.md
handoff/: plan.template.json  spec.template.md
issues/: TEMPLATE.md  auto-documentation.md  demo.md  git-automation.md
orchestrator/: config.json  documentation_watcher.sh  orchestrate.sh  orchestrate_with_dashboard.sh  validate.sh  watcher.sh  write_qa.py
reports/: qa.template.json
scripts/: dev.sh  generate_from_handoff.py
secrets/: env.example
src/maestro/: __init__.py  ci_cd_agent.py  dashboard.py  demo.py  documentation_agent.py  git_agent.py  orchestrator.py
tests/: test_documentation_agent.py  test_git_automation.py
tests/smoke/: test_orchestrator.py
tests/unit/: test_write_qa.py
